# az-gen-app-env

./: .gitignore  README.md  pyproject.toml
src/: cli.py  exceptions.py  fetcher.py  output.py  parser.py  resolver.py
